# credential-manager

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test_environment.env
.devcontainer/: devcontainer.json
.github/workflows/: build-image.yml
my_credentials/: __init__.py  config.py  utils.py  views.py
my_credentials/tests/: conftest.py  test_utils.py  test_views.py
templates/: base.html  create.html  credential_detail.html  credential_dockerconfigjson.html  credential_opaque.html  credential_ssh.html  credentials.html  secrets.html
