[tool.poetry]
name = "credential-manager"
version = "0.1.0"
description = ""
authors = ["Mirjam Ziselsberger <mirjam.ziselsberger@eox.at>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = { version = ">=0.136.1,<0.137.0", extras = ["all"] }
uvicorn = { version = ">=0.46.0,<0.47.0", extras = ["standard"] }
gunicorn = ">=25.3.0,<26.0.0"
starlette-exporter = ">=0.23.0,<0.24.0"
python-multipart = ">=0.0.27,<0.0.28"
pyjwt = { version = ">=2.12.1,<3.0.0", extras = ["crypto"] }
requests = ">=2.33.1,<3.0.0"
requests-oauthlib = ">=2.0.0,<3.0.0"
oauthlib = ">=3.3.1,<4.0.0"
cachetools = ">=7.0.6,<8.0.0"
jinja2 = ">=3.1.6,<4.0.0"
kubernetes = ">=35.0.0,<36.0.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-watch (>=4.2.0,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "async-asgi-testclient (>=1.4.11,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "types-cachetools (>=6.2.0.20260408,<7.0.0.0)",
    "types-requests (>=2.33.0.20260408,<3.0.0.0)"
]
